<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_delete">Delete</string>
    <string name="action_donate">Donate</string>
    <string name="action_insert">Insert</string>
    <string name="action_insert_variable">Insert Variable</string>
    <string name="action_quick_compose">Quick Compose</string>
    <string name="action_resend">Resend</string>
    <string name="action_resend_message">Would you like to resend this message to</string>
    <string name="action_resend_to_all">Resend this message to all recipients</string>
    <string name="action_resend_to_failed">Resend this message to failed recipients</string>
    <string name="action_resend_to_pending">Resend all pending messages</string>
    <string name="action_save">Save</string>
    <string name="action_select_recipients">Select Recipients</string>
    <string name="action_send_new_to_all">Send a new message to all recipients</string>
    <string name="action_send_this_message_to_others">Send this message to other recipients</string>
    <string name="action_set">Set</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_change_log">Show Change Log</string>
    <string name="action_toggle_views">Toggle Group View</string>
    <string name="action_toggle_views_short">Toggle</string>
    <string name="action_use_template">Use Template</string>
    <string name="app_name">Mass Text</string>
    <string name="callback">Callback</string>
    <string name="cant_be_define_as_custom_var">Input variable cannot be defined as a custom variable.</string>
    <string name="cant_save_without_body">You cannot save without body text.</string>
    <string name="cant_save_without_title">You cannot save without a title.</string>
    <string name="cant_send_empty_msg">You cannot send an empty message</string>
    <string name="car">Car</string>
    <string name="change_log_title">Change Log</string>
    <string name="clear_search_description">Clear search button</string>
    <string name="contact_image_label">Contact Image</string>
    <string name="contact_name_label">Contact Name</string>
    <string name="custom_variable">Custom Variable</string>
    <string name="delete_message">Delete Message?</string>
    <string name="delete_message_from_list">Do you want to delete this message from the list?</string>
    <string name="delete_template">Delete Template?</string>
    <string name="delivery_attempt">Delivery attempt:</string>
    <string name="didnt_write_var_name">You didn\'t write a variable name!</string>
    <string name="donate_explanation">Making apps isn\'t easy or fast, but I enjoy it. I originally made MassText out of necessity - I needed an app for sending personalized mass texts, but nothing on the Play Store worked very well. I thought a handful of people might find it useful, but I didn\'t anticipate that so many people would download it and request new features.\n\nI don\'t want to ruin the user experience by putting ads everywhere, but I would like some revenue from this app. Instead of making the app less useful or more annoying to use, twisting your arm to pay for some premium version, I am simply asking for you to pay what you think the app is worth to you.\n\nSo if this app has helped you or saved you time, please donate.</string>
    <string name="error_generic_failure">Error - Generic failure</string>
    <string name="error_no_service">Error - No Service</string>
    <string name="error_null_pdu">Error - Null PDU</string>
    <string name="error_radio_off">Error - Radio off</string>
    <string name="failed_attempts">failed attempts</string>
    <string name="fax_home">Fax Home</string>
    <string name="fax_work">Fax Work</string>
    <string name="finalize">Finalize</string>
    <string name="home">Home</string>
    <string name="mobile">Mobile</string>
    <string name="must_specify_recipient">You must specify at least one recipient</string>
    <string name="no_message_details">Unexpected error. No message details found.</string>
    <string name="no_saved_templates">You do not have any templates saved!</string>
    <string name="num_of_contacts"># of contacts:</string>
    <string name="other">Other</string>
    <string name="pager">Pager</string>
    <string name="pending_delivery">Pending delivery</string>
    <string name="phone_label">Phone:</string>
    <string name="save">Save</string>
    <string name="select_account_label">Select</string>
    <string name="select_all">Select All</string>
    <string name="select_color_accent">Accent Color</string>
    <string name="select_color_primary">Primary Color</string>
    <string name="send">Send</string>
    <string name="show_message_text">SHOW MESSAGE TEXT</string>
    <string name="successfully_sent">Successfully sent message!</string>
    <string name="title_activity_compose">Compose</string>
    <string name="title_activity_donate">Donate</string>
    <string name="title_activity_edit_template">Edit Template</string>
    <string name="title_activity_faqs">FAQs</string>
    <string name="title_activity_sent_message_details">Message Details</string>
    <string name="title_insert_variable">Insert Variable</string>
    <string name="title_message_body">Message</string>
    <string name="title_resend_message">Resend Message</string>
    <string name="title_section1">Messaging</string>
    <string name="title_section2">Templates</string>
    <string name="title_section3">About</string>
    <string name="title_select_template">Select Template</string>
    <string name="title_set_custom_variable">Set Custom Variable</string>
    <string name="title_set_day_of_week">Set Day of Week</string>
    <string name="title_template_title">Title</string>
    <string name="title_temple_body">Body</string>
    <string name="to_label">To:</string>
    <string name="toggle_groups_label">Groups</string>
    <string name="unknown_type">Unknown type</string>
    <string name="var_custom_variable">custom variable</string>
    <string name="var_date">date</string>
    <string name="var_day_of_week">day of the week</string>
    <string name="var_first_name">first name</string>
    <string name="var_friday">Friday</string>
    <string name="var_full_name">full name</string>
    <string name="var_last_name">last name</string>
    <string name="var_location">location</string>
    <string name="var_monday">Monday</string>
    <string name="var_saturday">Saturday</string>
    <string name="var_sunday">Sunday</string>
    <string name="var_thursday">Thursday</string>
    <string name="var_time">time</string>
    <string name="var_tuesday">Tuesday</string>
    <string name="var_wednesday">Wednesday</string>
    <string name="variable_not_set">Variable value not set</string>
    <string name="want_to_delete_template">Do you want to delete the template</string>
    <string name="work">Work</string>
    <string name="ok">Ok</string>
</resources>