<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:title="@string/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="never" />-->

    <item
        android:id="@+id/action_donate"
        android:title="@string/action_donate"
        android:orderInCategory="101"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_faq"
        android:title="@string/title_activity_faqs"
        android:orderInCategory="102"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_change_log"
        android:title="@string/action_show_change_log"
        android:orderInCategory="103"
        app:showAsAction="never" />

</menu>
